--- a/curriculo.html
+++ b/curriculo.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="pt-br">              
+    <head>
+        <title>sintaxe basica</title>
+        <link rel="stylesheet" type="text/css">
+        <script src="jquery.js"></script>
+        <script>
 
+        </script>
+    </head>
+    <body>
+        <p>
+          Sou aluno, e gosto de dorama
+        </p>
+        <hr>
+        <a href="calculadora.html">calculadora</a></br>
+        <a href="link.html">link</a></br>
+        <a href="curriculo.html">Curriculo</a></br>
+        <a href="meusProjetos.html">meusProjetos</a></br>
+        <a href="sintaxe_basica.html">sintaxe_basica</a></br>
+        <a href="template.html">template</a></br>
+    </body>
+</html>
